update: null render implementation

--- a/src/lib/render/CMakeLists.txt
+++ b/src/lib/render/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 ####################################################################################################
 #                                                                                                  #
-# Copyright (C) 2016 University of Hull                                                            #
+# Copyright (C) 2016-2017 University of Hull                                                       #
 #                                                                                                  #
 ####################################################################################################
 
@@ -22,12 +22,16 @@ list(APPEND SRC context/base.cpp)
 list(APPEND SRC context/device.cpp)
 list(APPEND SRC context/swap.cpp)
 
+list(APPEND SRC null/context.cpp)
+list(APPEND SRC null/pass/standard.cpp)
+list(APPEND SRC null/stage/clear.cpp)
+list(APPEND SRC null/stage/draw.cpp)
+list(APPEND SRC null/stage/swap.cpp)
+
 list(APPEND SRC pass/base.cpp)
 list(APPEND SRC pass/container.cpp)
-list(APPEND SRC pass/null.cpp)
 
 list(APPEND SRC stage/base.cpp)
-list(APPEND SRC stage/null.cpp)
 
 list(APPEND SRC statistics/base.cpp)
 list(APPEND SRC statistics/cpu.cpp)
