--- a/src/lib/render/test/CMakeLists.txt
+++ b/src/lib/render/test/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 ####################################################################################################
 #                                                                                                  #
-# Copyright (C) 2016 University of Hull                                                            #
+# Copyright (C) 2016-2017 University of Hull                                                       #
 #                                                                                                  #
 ####################################################################################################
 
@@ -13,11 +13,8 @@ find_package(Boost ${BOOST_MINIMUM_VERSION} REQUIRED COMPONENTS unit_test_framew
 include_directories(SYSTEM ${Boost_INLCUDE_DIR})
 
 set(SRC)
-list(APPEND SRC compile.cpp)
 list(APPEND SRC context.cpp)
-list(APPEND SRC pass_container.cpp)
-list(APPEND SRC pass_null.cpp)
-list(APPEND SRC stage_null.cpp)
+list(APPEND SRC null_pass_standard.cpp)
 list(APPEND SRC statistics_cpu.cpp)
 list(APPEND SRC window.cpp)
 
