--- a/src/lib/render/test/CMakeLists.txt
+++ b/src/lib/render/test/CMakeLists.txt
@@ -13,10 +13,13 @@ find_package(Boost ${BOOST_MINIMUM_VERSION} REQUIRED COMPONENTS unit_test_framew
 include_directories(SYSTEM ${Boost_INLCUDE_DIR})
 
 set(SRC)
-list(APPEND SRC context.cpp)
+list(APPEND SRC null_context.cpp)
 list(APPEND SRC null_pass_standard.cpp)
+list(APPEND SRC null_stage_clear.cpp)
+list(APPEND SRC null_stage_draw.cpp)
+list(APPEND SRC null_stage_swap.cpp)
+list(APPEND SRC null_window.cpp)
 list(APPEND SRC statistics_cpu.cpp)
-list(APPEND SRC window.cpp)
 
 #add_definitions(-DHUGH_ALL_TRACE)
 
