added: render::pass:container unit test

--- a/src/lib/render/test/CMakeLists.txt
+++ b/src/lib/render/test/CMakeLists.txt
@@ -17,6 +17,7 @@ list(APPEND SRC null_action_clear.cpp)
 list(APPEND SRC null_action_draw.cpp)
 list(APPEND SRC null_action_swap.cpp)
 list(APPEND SRC null_context.cpp)
+list(APPEND SRC null_pass_container.cpp)
 list(APPEND SRC null_pass_standard.cpp)
 list(APPEND SRC null_state_raster.cpp)
 list(APPEND SRC null_window.cpp)
