update: added null:;[action|shader|state|target]s

--- a/src/lib/render/test/CMakeLists.txt
+++ b/src/lib/render/test/CMakeLists.txt
@@ -13,13 +13,13 @@ find_package(Boost ${BOOST_MINIMUM_VERSION} REQUIRED COMPONENTS unit_test_framew
 include_directories(SYSTEM ${Boost_INLCUDE_DIR})
 
 set(SRC)
-list(APPEND SRC null_action_clear.cpp)
-list(APPEND SRC null_action_draw.cpp)
-list(APPEND SRC null_action_swap.cpp)
+list(APPEND SRC null_actions.cpp)
 list(APPEND SRC null_context.cpp)
 list(APPEND SRC null_pass_container.cpp)
 list(APPEND SRC null_pass_standard.cpp)
-list(APPEND SRC null_state_raster.cpp)
+list(APPEND SRC null_shaders.cpp)
+list(APPEND SRC null_states.cpp)
+list(APPEND SRC null_targets.cpp)
 list(APPEND SRC null_window.cpp)
 list(APPEND SRC statistics_cpu.cpp)
 
