added: render::interface

--- a/src/lib/render/CMakeLists.txt
+++ b/src/lib/render/CMakeLists.txt
@@ -22,6 +22,11 @@ list(APPEND SRC action/base.cpp)
 list(APPEND SRC context/base.cpp)
 list(APPEND SRC context/device.cpp)
 list(APPEND SRC context/swap.cpp)
+list(APPEND SRC interface/activatable.cpp)
+list(APPEND SRC interface/applicable.cpp)
+list(APPEND SRC interface/executable.cpp)
+list(APPEND SRC interface/invalidatable.cpp)
+list(APPEND SRC interface/resizable.cpp)
 list(APPEND SRC pass/base.cpp)
 list(APPEND SRC pass/container.cpp)
 list(APPEND SRC shader/base.cpp)
